WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274352
DOMException should have a virtual destructor
https://bugs.webkit.org/show_bug.cgi?id=274352
Summary
DOMException should have a virtual destructor
Ryosuke Niwa
Reported
2024-05-18 11:52:32 PDT
Since it has subclasses, it should have a virtual destructor.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-05-18 11:54:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28756
EWS
Comment 2
2024-05-19 23:56:32 PDT
Committed
278981@main
(26c66251dd45): <
https://commits.webkit.org/278981@main
> Reviewed commits have been landed. Closing PR #28756 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-05-19 23:57:15 PDT
<
rdar://problem/128379385
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug