DOMException should have a virtual destructor https://bugs.webkit.org/show_bug.cgi?id=274352

Reviewed by Chris Dumez.

Added a virtual destructor since this class has subclasses.

* Source/WebCore/dom/DOMException.h:
(WebCore::DOMException::~DOMException):

Canonical link: https://commits.webkit.org/278981@main